--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "skoleskyss-dashboard",
   "description": "Dashboard for skoleskyss",
-  "version": "1.1.1",
+  "version": "1.2.0",
   "license": "MIT",
   "private": true,
   "author": {
@@ -10,7 +10,7 @@
     "url": "https://github.com/zrrrzzt"
   },
   "engines": {
-    "node": ">=8.5.0"
+    "node": ">=8.8.0"
   },
   "scripts": {
     "test": "standard && nsp check && ava",
@@ -31,7 +31,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/telemark/skoleskyss-dashboard.git"
+    "url": "git+https://github.com/telemark/skoleskyss-dashboard.git"
   },
   "bugs": {
     "url": "https://github.com/telemark/skoleskyss-dashboard/issues"
